// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeAsset should render ERC20 asset 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined cursor-pointer bridge-asset mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--height-max mm-box--background-color-transparent mm-box--rounded-none"
  data-testid="bridge-asset--eip155:1/erc20:0xacA92E438df0B2401fF60dA7E4337B687a2435DA"
>
  <div
    class="relative inline-flex self-start"
    style="align-self: center;"
  >
    <div
      class="inline-flex"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-full h-8 w-8"
      >
        <img
          alt="mUSD"
          class="size-full object-contain"
          src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xaca92e438df0b2401ff60da7e4337b687a2435da.png"
        />
      </div>
    </div>
    <div
      class="absolute inline-flex items-center justify-center"
      color="background-default"
      style="bottom: 7%; right: 7%; transform: translate(50%, 50%);"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-[34px] w-[34px] border-background-default border rounded-md"
        style="width: 15px; height: 15px; border-width: 1px;"
      >
        <img
          alt="Ethereum"
          class="size-full object-contain"
          src="./images/eth_logo.svg"
        />
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
    style="overflow: hidden; margin-left: 8px;"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default truncate"
          data-testid="bridge-asset-symbol"
        >
          mUSD
        </p>
      </div>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-end"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate"
        style="white-space: nowrap;"
      >
        MetaMask USD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
  </div>
  <button
    aria-label="View token details"
    class="inline-flex shrink-0 items-center justify-center rounded-full p-0 h-8 w-8 bg-transparent hover:bg-hover active:bg-pressed text-icon-default bridge-asset-info-icon"
    data-testid="bridge-asset-info-icon-eip155:1/erc20:0xacA92E438df0B2401fF60dA7E4337B687a2435DA"
  >
    <svg
      class="inline-block w-4 h-4 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m1.5-3.75a.75.75 0 0 1-.75.75 1.5 1.5 0 0 1-1.5-1.5V12a.75.75 0 0 1 0-1.5 1.5 1.5 0 0 1 1.5 1.5v3.75a.75.75 0 0 1 .75.75m-3-8.625A1.125 1.125 0 1 1 11.625 9 1.125 1.125 0 0 1 10.5 7.875"
      />
    </svg>
  </button>
</div>
`;

exports[`BridgeAsset should render asset with accountType 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined cursor-pointer bridge-asset mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--height-max mm-box--background-color-transparent mm-box--rounded-none"
  data-testid="bridge-asset--bip122:000000000019d6689c085ae165831e93/slip44:0"
>
  <div
    class="relative inline-flex self-start"
    style="align-self: center;"
  >
    <div
      class="inline-flex"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-full h-8 w-8"
      >
        <img
          alt="BTC"
          class="size-full object-contain"
          src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/bip122/000000000019d6689c085ae165831e93/slip44/0.png"
        />
      </div>
    </div>
    <div
      class="absolute inline-flex items-center justify-center"
      color="background-default"
      style="bottom: 7%; right: 7%; transform: translate(50%, 50%);"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-[34px] w-[34px] border-background-default border rounded-md"
        style="width: 15px; height: 15px; border-width: 1px;"
      >
        <img
          alt="Bitcoin"
          class="size-full object-contain"
          src="./images/bitcoin-logo.svg"
        />
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
    style="overflow: hidden; margin-left: 8px;"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default truncate"
          data-testid="bridge-asset-symbol"
        >
          BTC
        </p>
        <div
          class="mm-box mm-tag mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-section mm-box--rounded-sm"
        >
          <p
            class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          >
            Native SegWit
          </p>
        </div>
      </div>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-end"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate"
        style="white-space: nowrap;"
      >
        Bitcoin
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
  </div>
  <button
    aria-label="View token details"
    class="inline-flex shrink-0 items-center justify-center rounded-full p-0 h-8 w-8 bg-transparent hover:bg-hover active:bg-pressed text-icon-default bridge-asset-info-icon"
    data-testid="bridge-asset-info-icon-bip122:000000000019d6689c085ae165831e93/slip44:0"
  >
    <svg
      class="inline-block w-4 h-4 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m1.5-3.75a.75.75 0 0 1-.75.75 1.5 1.5 0 0 1-1.5-1.5V12a.75.75 0 0 1 0-1.5 1.5 1.5 0 0 1 1.5 1.5v3.75a.75.75 0 0 1 .75.75m-3-8.625A1.125 1.125 0 1 1 11.625 9 1.125 1.125 0 0 1 10.5 7.875"
      />
    </svg>
  </button>
</div>
`;

exports[`BridgeAsset should render asset with balance 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined cursor-pointer bridge-asset mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--height-max mm-box--background-color-transparent mm-box--rounded-none"
  data-testid="bridge-asset--eip155:1/erc20:0xacA92E438df0B2401fF60dA7E4337B687a2435DA"
>
  <div
    class="relative inline-flex self-start"
    style="align-self: center;"
  >
    <div
      class="inline-flex"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-full h-8 w-8"
      >
        <img
          alt="mUSD"
          class="size-full object-contain"
          src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xaca92e438df0b2401ff60da7e4337b687a2435da.png"
        />
      </div>
    </div>
    <div
      class="absolute inline-flex items-center justify-center"
      color="background-default"
      style="bottom: 7%; right: 7%; transform: translate(50%, 50%);"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-[34px] w-[34px] border-background-default border rounded-md"
        style="width: 15px; height: 15px; border-width: 1px;"
      >
        <img
          alt="Ethereum"
          class="size-full object-contain"
          src="./images/eth_logo.svg"
        />
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
    style="overflow: hidden; margin-left: 8px;"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default truncate"
          data-testid="bridge-asset-symbol"
        >
          mUSD
        </p>
      </div>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        style="white-space: nowrap;"
      >
        $100.00
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-end"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate"
        style="white-space: nowrap;"
      >
        MetaMask USD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        style="white-space: nowrap;"
      >
        100 mUSD
      </p>
    </div>
  </div>
  <button
    aria-label="View token details"
    class="inline-flex shrink-0 items-center justify-center rounded-full p-0 h-8 w-8 bg-transparent hover:bg-hover active:bg-pressed text-icon-default bridge-asset-info-icon"
    data-testid="bridge-asset-info-icon-eip155:1/erc20:0xacA92E438df0B2401fF60dA7E4337B687a2435DA"
  >
    <svg
      class="inline-block w-4 h-4 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m1.5-3.75a.75.75 0 0 1-.75.75 1.5 1.5 0 0 1-1.5-1.5V12a.75.75 0 0 1 0-1.5 1.5 1.5 0 0 1 1.5 1.5v3.75a.75.75 0 0 1 .75.75m-3-8.625A1.125 1.125 0 1 1 11.625 9 1.125 1.125 0 0 1 10.5 7.875"
      />
    </svg>
  </button>
</div>
`;

exports[`BridgeAsset should render native asset 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined cursor-pointer bridge-asset--selected mm-box--padding-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--height-max mm-box--background-color-primary-muted mm-box--rounded-none"
  data-testid="bridge-asset--eip155:1/slip44:60"
>
  <div
    class="bg-primary-default multichain-network-list-item__selected-indicator"
    style="border-radius: pill; position: absolute;"
  />
  <div
    class="relative inline-flex self-start"
    style="align-self: center;"
  >
    <div
      class="inline-flex"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative rounded-full h-8 w-8"
      >
        <img
          alt="ETH"
          class="size-full object-contain"
          src="https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/slip44/60.png"
        />
      </div>
    </div>
    <div
      class="absolute inline-flex items-center justify-center"
      color="background-default"
      style="bottom: 7%; right: 7%; transform: translate(50%, 50%);"
    >
      <div
        class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-[34px] w-[34px] border-background-default border rounded-md"
        style="width: 15px; height: 15px; border-width: 1px;"
      >
        <img
          alt="Ethereum"
          class="size-full object-contain"
          src="./images/eth_logo.svg"
        />
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
    style="overflow: hidden; margin-left: 8px;"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default truncate"
          data-testid="bridge-asset-symbol"
        >
          ETH
        </p>
      </div>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-flex-end"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate"
        style="white-space: nowrap;"
      >
        Ether
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        style="white-space: nowrap;"
      />
    </div>
  </div>
  <button
    aria-label="View token details"
    class="inline-flex shrink-0 items-center justify-center rounded-full p-0 h-8 w-8 bg-transparent hover:bg-hover active:bg-pressed text-icon-default bridge-asset-info-icon"
    data-testid="bridge-asset-info-icon-eip155:1/slip44:60"
  >
    <svg
      class="inline-block w-4 h-4 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m1.5-3.75a.75.75 0 0 1-.75.75 1.5 1.5 0 0 1-1.5-1.5V12a.75.75 0 0 1 0-1.5 1.5 1.5 0 0 1 1.5 1.5v3.75a.75.75 0 0 1 .75.75m-3-8.625A1.125 1.125 0 1 1 11.625 9 1.125 1.125 0 0 1 10.5 7.875"
      />
    </svg>
  </button>
</div>
`;
